discussion/kv_engine/165403/165403_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Clang-tidy: checkpoint_test.(h/cc)

Change-Id: I75c8b22451cff3f6c67beec0f5e3a9570949cbb4

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2021-11-11 13:46:25.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2021-11-11 13:47:34.000000000
Message: 
Patch Set 3:

(1 comment)
Line:3496, engines/ep/tests/module_tests/checkpoint_test.cc -> Or just:

 ASSERT_TRUE(CheckpointCursorIntrospector::getCurrentPos(cursor)->isEmptyItem());

?

----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-11-11 13:49:58.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35427/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/35427/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41716/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/41716/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15849/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/15849/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14740/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/14740/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3583/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/3583/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23921/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/23921/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/3657/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13947/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3506:24: error: use of undeclared identifier "pos" [clang-diagnostic-error]
    size_t emptySize = pos->size();
                       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13947/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3506:24:
error: use of undeclared identifier "pos" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/13947/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16559/ : FAILURE

Compile error at [2021-11-11T13:48:10.603Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3506:24:
error: use of undeclared identifier "pos"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/16559/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15568/ : FAILURE

Compile error at [2021-11-11T13:48:28.381Z] ../kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:3506:24:
error: ?pos? was not declared in this scope; did you mean ?pow??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/15568/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/12751/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2021-11-11 13:53:20.000000000
MISMATCHED INLINE COMMENT
Line:3496, engines/ep/tests/module_tests/checkpoint_test.cc -> Need the var as we call size() on line 3506
----------------------------------------------------------------------------------------------------------------------
